fixed table spacing

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -127,7 +127,7 @@ body {
 }
 
 .player-table td {
-    padding: 18px 20px;
+    padding: 14px 20px;
     vertical-align: middle;
 }
 
@@ -143,7 +143,7 @@ body {
 }
 
 .table-page-heading {
-    margin-top: 25px;
+    margin-top: 30px;
 }
 
 .table-page-heading p + p {
@@ -155,7 +155,7 @@ body {
     top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-height: 280px;
+    max-height: 230px;
     overflow-y: auto;
 }
 
